<resources>
    <string name="app_name">Android Tutorial</string>

    <string name="ch01">Hello World Application</string>
    <string name="ch02">Working With Multiple Activities</string>
    <string name="ch03">Create Simple User Interface</string>
    <string name="ch04">4. Send Data to An Activity</string>

    <string name="ch05">5. Input Controls-Buttons</string>
    <string name="ch05_description">There Are Three Kinds Of Buttons >> </string>
    <string name="ch05_tv_b1">1. Just Button</string>
    <string name="ch05_tv_b2">2. Image Button</string>
    <string name="ch05_tv_b3">3. Combined Form</string>
    <string name="ch05_b1">BUTTON</string>
    <string name="ch05_b3">Click Me</string>

    <string name="ch06">6. Form Entry</string>
    <string name="ch06_Et01">Name</string>
    <string name="ch06_Et02">Title</string>
    <string name="ch06_Et03">Age</string>
    <string name="ch06_ACTV01">Sex</string>
    <string name="ch06_ACTV02">Country</string>
    <string-array name="ch06_country">
        <item>India</item>
        <item>Pakistan</item>
        <item>Bangladesh</item>
        <item>China</item>
        <item>Nepal</item>
        <item>Bhutan</item>
        <item>Sri Lanka</item>
        <item>Afganishtan</item>
        <item>Dubai</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Australia</item>
        <item>America</item>
    </string-array>
    <string name="ch06_cb01">Algorithm</string>
    <string name="ch06_cb02">Machine Learning</string>
    <string name="ch06_cb03">Android</string>
    <string name="ch06_cb04">Data Analytics</string>
    <string name="sbmt">Submit</string>

    <string name="ch07">7. List View [Default] with OPTIONS</string>
    <string name="ch07_intro">Below is the list of Algorithm topics >></string>

    <string name="ch08">8. List View [Defined Layout And Default Adapter]</string>

    <string name="ch09">9. Custom List view</string>
    <string name="ch09_title"></string>
    <string-array name="ch09_Chapters">
        <item>Linked List</item>
        <item>Stack</item>
        <item>Queues</item>
        <item>Trees</item>
        <item>String Operation</item>
        <item>Graphs</item>
        <item>Hash Table</item>
    </string-array>
    <string-array name="ch09_problems">
        <item>Problems:25</item>
        <item>Problems:30</item>
        <item>Problems:26</item>
        <item>Problems:17</item>
        <item>Problems:21</item>
        <item>Problems:29</item>
        <item>Problems:32</item>
    </string-array>

    <string name="ch10">10. Pop-Up Menu Demo</string>

    <string name="search">SEARCH</string>
    <string name="delete">DELETE</string>
    <string name="share">SHARE</string>
    <string name="help">HELP</string>
    <string name="settings">SETTINGS</string>

    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>

</resources>