<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <Button
        android:id="@+id/Unit_01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ch01"
        android:onClick="toCourse"/>

    <Button
        android:id="@+id/Unit_02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ch02"
        android:onClick="toCourse"/>

    <Button
        android:id="@+id/Unit_03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ch03"
        android:onClick="toCourse"/>

    <Button
        android:id="@+id/Unit_04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ch04"
        android:onClick="toCourse"/>

    <Button
        android:id="@+id/Unit_05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ch05"
        android:onClick="toCourse"/>

    <Button
        android:id="@+id/Unit_06"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ch06"
        android:onClick="toCourse"/>

</LinearLayout>

