<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_unit05"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.androidtutorial.Unit05">

    <TextView
        android:id="@+id/Unit05_title"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/ch05"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/Unit05_description"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/ch05_description"
        android:textSize="22sp"
        android:layout_below="@id/Unit05_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/unit05_op01"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_below="@id/Unit05_description"
        android:text="@string/ch05_tv_b1"
        android:textSize="20sp"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/unit05_op02"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_below="@id/unit05_op01"
        android:text="@string/ch05_tv_b2"
        android:textSize="20sp"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/unit05_op03"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_below="@id/unit05_op02"
        android:text="@string/ch05_tv_b3"
        android:textSize="20sp"
        android:gravity="center_vertical"/>

    <Button
        android:id="@+id/unit05_b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch05_b1"
        android:clickable="true"
        android:layout_marginRight="42dp"
        android:layout_marginEnd="42dp"
        android:layout_alignBaseline="@+id/unit05_op01"
        android:layout_alignBottom="@+id/unit05_op01"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="ToastIt" />

    <ImageButton
        android:id="@+id/unit05_b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/thumbsup"
        android:layout_above="@+id/unit05_op03"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="ToastIt"/>

    <Button
        android:id="@+id/unit05_b3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch05_b3"
        android:clickable="true"
        android:drawableLeft="@drawable/clickme"
        android:layout_alignBaseline="@+id/unit05_op03"
        android:layout_alignBottom="@+id/unit05_op03"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="19dp"
        android:layout_marginEnd="19dp"
        android:onClick="ToastIt" />

</RelativeLayout>
